examples/test/testpolicy14727.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14727
  namespace: namespace236
spec:
  podSelector:
    matchLabels:
      key39: value13
      key23: value8
      key3: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value1
      podSelector:
        matchLabels:
          key24: value28
